Restructured files and have a landing page using class-based views

--- a/coffeepot/chemex/templates/chemex/index.html
+++ b/coffeepot/chemex/templates/chemex/index.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-    {% block main %} {% include "nav_bar.html" with nav_location=view.location %} {% endblock main %}
+    {% block nav %} {% include "chemex/nav_bar.html" with nav_location=view.location %}{% endblock %}
     <h1>Welcome to Brew!</h1>
+    {% block button %} {% endblock %}
 
 </body>
 
