--- a/coffeepot/chemex/templates/chemex/nav_bar.html
+++ b/coffeepot/chemex/templates/chemex/nav_bar.html
@@ -21,9 +21,10 @@
             </div>
         {% endcomment %}
         {% if user.is_authenticated %}
-        <a href="">Logout</a>
+        <a href="{% url 'logged_out' %}">Logout</a>
         {% else %}
-        <a href="">Login/Register</a>
+        <a href="{% url 'login' %}">Login/Register</a>
+        <p>Login to save your brews!</p>
         {% endif %}
     </nav>
 
