--- a/coffeepot/chemex/templates/registration/login.html
+++ b/coffeepot/chemex/templates/registration/login.html
@@ -1,10 +1,12 @@
 {% block title %}Login{% endblock %}
 
+
 {% block content %}
   <h2>Login</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Login</button>
+    <p><a href="{% url 'sign_up' %}">Don't have an account? Register here.</a></p>
   </form>
 {% endblock %}
