--- a/coffeepot/chemex/templates/chemex/nav_bar.html
+++ b/coffeepot/chemex/templates/chemex/nav_bar.html
@@ -1,31 +1,24 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'website/navbar.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'chemex/navbar.css' %}">
 
 
-    <nav class="navbar">
-        <a href="">Brew</a>
-
-        {% comment %}
-        <input type="search" placeholder="Search">
-        <a href="{% url 'website:product_types' %}">All Products</a>
-        <a href="{% url 'website:sell_a_products' %}">Sell A Product</a>
-        <a href="{% url 'website:notifications' %}">Notifications</a>
-        <div class="dropdown">
-            <button class="dropbtn">My Account</button>
-            <div class="dropdown_nav">
-                <a href="{% url 'website:account_home' %}">My Account</a>
-                <div class="dropdown_content">
-                    <a href="{% url 'website:my_products' %}">My Products</a>
-                    <a href="{% url 'website:order_history' %}">Order History</a>
-                </div>
-            </div>
-        {% endcomment %}
-        {% if user.is_authenticated %}
-        <a href="{% url 'logged_out' %}">Logout</a>
+    <div class="flex--container">
+        <span class="flex--title">
+            <a href="{% url 'index' %}"> Brew</a>
+        </span>
+        <span class="flex--auth">
+            {% if user.is_authenticated %}
+            <a href="{% url 'logged_out' %}">Logout</a>
+        </span>
         {% else %}
-        <a href="{% url 'login' %}">Login/Register</a>
-        <p>Login to save your brews!</p>
+        <span class="flex--auth">
+            <a href="{% url 'login' %}">Login</a>
+        </span>
         {% endif %}
-    </nav>
+    </div>
+    {% if user.is_anonymous %}
+    <p class="test">Login to save your brews!</p>
+    {% endif %}
 
     {% block cool %} {% endblock %}
+
