Created forms for adding favorites that post to correct tables

--- a/coffeepot/chemex/templates/chemex/coffee_tracker.html
+++ b/coffeepot/chemex/templates/chemex/coffee_tracker.html
@@ -20,7 +20,7 @@
         <div class="dropdown-content">
             <div><a href="{% url 'favorite_roaster' %}">Roaster</a></div>
             <div><a href="{% url 'favorite_roast' %}">Roast</a></div>
-            <div><a href="">BrewingMethod</a></div>
+            <div><a href="{% url 'favorite_method' %}">BrewingMethod</a></div>
         </div>
     </div>
     <div>
