--- a/coffeepot/chemex/templates/chemex/favoriteroast_form.html
+++ b/coffeepot/chemex/templates/chemex/favoriteroast_form.html
@@ -1,9 +1,18 @@
-
-{% block nav %} {% include "chemex/nav_bar.html" with nav_location=view.location %}{% endblock %}
-
-<h4>Fill out the information below:</h4>
-<form method="POST" class='add-roast'>
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn">Save</button>
-</form>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Brew</title>
+    </head>
+    
+    <body>
+        {% block nav %} {% include "chemex/nav_bar.html" with nav_location=view.location %}{% endblock %}
+        <div>Favorite Roast</div>
+        <form method="POST" class='add-roaster'>
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn">Save</button>
+        </form>
+        <div><a href="{% url 'coffee_tracker' %}">Back</a></div>
+    </body>
+</html>
