--- a/coffeepot/chemex/templates/chemex/coffee_tracker.html
+++ b/coffeepot/chemex/templates/chemex/coffee_tracker.html
@@ -23,12 +23,9 @@
             <div><a href="{% url 'favorite_method' %}">BrewingMethod</a></div>
         </div>
     </div>
-    
-    {% for userRoast in roast_list%}
-        <h3>{{userRoast.name}}</h3>
-    {% endfor %}
+    <div><a href="{% url 'my_favorites' %}">My Favorites</a></div>
 
-    {% block button %} {% endblock %}
+
 
 
 </body>
