Formatted favorites cards

--- a/coffeepot/chemex/templates/chemex/favoritemethod_list.html
+++ b/coffeepot/chemex/templates/chemex/favoritemethod_list.html
@@ -1,5 +1,5 @@
 {% block nav %} {% include "chemex/nav_bar.html" with nav_location=view.location %}{% endblock %}
-<div>My Favorite Roaster</div>
+<div>Brewing Method Preferences</div>
 
 {% for userMethod in brewingMethod_list %}
 <h3>{{userMethod.name}}</h3>
