--- a/coffeepot/chemex/templates/chemex/favoriteroast_list.html
+++ b/coffeepot/chemex/templates/chemex/favoriteroast_list.html
@@ -2,7 +2,9 @@
 <div>My Favorite Roasts</div>
 
 {% for userRoast in roast_list%}
-<h3>{{userRoast.name}}</h3>
+<div class="roast--card">
+    {{userRoast.name}} by {{userRoast.roaster}}
+</div>
 {% endfor %}
 
 {% block button %} {% endblock %}
