added update affordance for each favorite

--- a/coffeepot/chemex/templates/chemex/favoritemethod_list.html
+++ b/coffeepot/chemex/templates/chemex/favoritemethod_list.html
@@ -3,6 +3,8 @@
 
 {% for userMethod in brewingMethod_list %}
 <h3>{{userMethod.name}}</h3>
+<div><a href="{% url 'update_method' pk=userMethod.pk %}">Update</a></div>
+
 {% endfor %}
 
 {% block button %} {% endblock %}
