--- a/coffeepot/chemex/templates/chemex/index.html
+++ b/coffeepot/chemex/templates/chemex/index.html
@@ -3,25 +3,22 @@
 
 <title>Brew</title>
 <body>
-    {% block nav %} {% include "chemex/nav_bar.html" with nav_location=view.location %}{% endblock %}
+    {% block nav %} {% include "chemex/nav_bar.html" %}{% endblock %}
     {% load static %} <img class="image--2" src="{% static 'images/coffee2.jpg' %}" alt="test"/>
 
-    <h1>Welcome to Brew!</h1>
-    <div class="main--container">
-        {% if user.is_authenticated %}
-        <div class="right--item"><a href="{% url 'coffee_tracker' %}">Coffee Tracker</a></div>
-        {% else %}
-        <div>Login to track your brews</div>
-        {% block button %} {% endblock %}
-        {% endif %}
+    <div class="words--container">
+        <h1 class="main--words">Welcome to Brew!</h1>
     </div>
 
-    <div class="more--info">Other Coffee information
+    <span class="more--info">
         <div class="words--container">
             {% load static %} <img class="image--1" src="{% static 'images/coffee1.png' %}" alt="test"/>
             <span class="words">Join Brew today to keep track and save all of your favorites.</span>
             <span class="words2">See and share different coffees with other brewers!</span>
         </div>
+    </span>
+    <div>
+        {% block logos %} {% include "chemex/coffee_logos.html" %}{% endblock %}
     </div>
     <footer class="footer--content">This is the footer</footer>
 </body>
